--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -43,7 +43,7 @@ section {
 }
 
 body {
-  background-color: #2c3e50;
+  background-color: #fff;
   min-height: 100%;
   overflow-x: hidden;
   position: relative;
@@ -75,7 +75,7 @@ li {
  *  BACKGROUND
  */
 .bg-primary {
-  background-color: #1abc9c;
+  background-color: #A152F7;
 }
 .bg-dark {
   background-color: #18232f;
@@ -109,23 +109,23 @@ li {
  *  BORDER
  */
 .border {
-  border: 1px solid #465f78;
+  border: 1px solid #C04AF7;
 }
 
 .border-bottom {
-  border-bottom: 1px solid #465f78;
+  border-bottom: 1px solid #C04AF7;
 }
 
 .border-left {
-  border-left: 1px solid #465f78;
+  border-left: 1px solid #C04AF7;
 }
 
 .border-right {
-  border-right: 1px solid #465f78;
+  border-right: 1px solid #C04AF7;
 }
 
 .border-top {
-  border-top: 1px solid #465f78;
+  border-top: 1px solid #C04AF7;
 }
 
 /**
@@ -352,7 +352,7 @@ li {
  *  TYPOGRAPHY
  */
 body {
-  color: #fff;
+  color: #000;
   font-family: "Lato", sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -360,14 +360,14 @@ body {
 }
 
 a {
-  color: #1abc9c;
+  color: #A152F7;
   text-decoration: none;
 }
 a:hover {
-  color: rgba(26, 188, 156, 0.8);
+  color: rgba(161, 82, 247, 0.8);
 }
 a:focus {
-  color: #1abc9c;
+  color: #A152F7;
 }
 
 .text-huge, .text-big, .text-medium {
@@ -395,7 +395,7 @@ a:focus {
 }
 
 .text-primary {
-  color: #1abc9c;
+  color: #A152F7;
 }
 .text-dark {
   color: #18232f;
@@ -491,9 +491,9 @@ h4 {
  *
  */
 .badge {
-  background-color: #34495e;
+  background-color: #bc8ef1;
   border-radius: 3px;
-  color: #fff;
+  color: #000;
   display: inline-block;
   line-height: 1.2em;
   padding: 8px 16px;
@@ -505,7 +505,7 @@ h4 {
   font-size: 0.7em;
 }
 .badge--primary {
-  background-color: #1abc9c;
+  background-color: #A152F7;
   color: #fff;
 }
 .badge--secondary {
@@ -550,7 +550,7 @@ button {
 }
 
 .button {
-  background-color: #1abc9c;
+  background-color: #A152F7;
   border: 0;
   border-radius: 200px;
   color: #fff;
@@ -571,7 +571,7 @@ button {
   color: #fff;
 }
 .button:hover {
-  background-color: rgba(26, 188, 156, 0.8);
+  background-color: rgba(161, 82, 247, 0.8);
   color: #fff;
   cursor: pointer;
   text-decoration: none;
@@ -610,11 +610,11 @@ button {
 }
 .button--white {
   background-color: #fff;
-  color: #1abc9c;
+  color: #A152F7;
 }
 .button--white:hover {
   background-color: rgba(255, 255, 255, 0.8);
-  color: rgba(26, 188, 156, 0.8);
+  color: rgba(161, 82, 247, 0.8);
 }
 .button--green {
   background-color: #4caf50;
@@ -634,16 +634,16 @@ button {
 }
 .button--transparent {
   background-color: transparent;
-  color: #1abc9c;
+  color: #A152F7;
 }
 .button--transparent:active, .button--transparent:hover, .button--transparent:focus {
   background-color: transparent;
-  color: rgba(26, 188, 156, 0.8);
+  color: rgba(161, 82, 247, 0.8);
   opacity: 0.8;
 }
 .button--outlined {
   background-color: transparent;
-  border: 1px solid #465f78;
+  border: 1px solid #C04AF7;
   color: #fff;
 }
 .button--outlined:active, .button--outlined:hover, .button--outlined:focus {
@@ -693,13 +693,13 @@ label {
 }
 
 input:-webkit-autofill {
-  box-shadow: 0 0 0 1000px #34495e inset;
+  box-shadow: 0 0 0 1000px #bc8ef1 inset;
 }
 
 .textarea,
 .input,
 .select {
-  border: 1px solid #465f78;
+  border: 1px solid #C04AF7;
   border-radius: 3px;
   box-shadow: none;
   display: inline-block;
@@ -715,13 +715,13 @@ input:-webkit-autofill {
 .textarea.has-error,
 .input.has-error,
 .select.has-error {
-  background: #34495e;
+  background: #bc8ef1;
   border: 1px solid #e74c3c;
   margin-bottom: 0;
 }
 
 .select {
-  background-color: #34495e;
+  background-color: #bc8ef1;
   display: inline-block;
   margin-right: 16px;
   position: relative;
@@ -740,7 +740,7 @@ input:-webkit-autofill {
   background-color: transparent;
   border: 0;
   border-radius: 0;
-  color: #fff;
+  color: #000;
   display: block;
   font-size: 16px;
   line-height: 1.5em;
@@ -751,7 +751,7 @@ input:-webkit-autofill {
   width: 100%;
 }
 .select select:active, .select select:focus {
-  background-color: #3d566e;
+  background-color: #c9a5f4;
   border: 0;
   outline: none;
 }
@@ -759,7 +759,7 @@ input:-webkit-autofill {
   display: none;
 }
 .select::after, .select::before {
-  background: #1abc9c;
+  background: #A152F7;
   content: "";
   display: block;
   height: 2px;
@@ -778,7 +778,7 @@ input:-webkit-autofill {
 }
 
 .textarea {
-  background-color: #34495e;
+  background-color: #bc8ef1;
   padding: 0;
 }
 .textarea-fullWidth {
@@ -790,7 +790,7 @@ input:-webkit-autofill {
 .textarea textarea {
   background: transparent;
   border: 0;
-  color: #fff;
+  color: #000;
   display: block;
   font-family: "Lato", sans-serif;
   font-size: 16px;
@@ -805,7 +805,7 @@ input:-webkit-autofill {
   color: #969da6;
 }
 .textarea textarea:focus, .textarea textarea:active {
-  background-color: #3d566e;
+  background-color: #c9a5f4;
   border: 0;
   outline: none;
 }
@@ -830,8 +830,8 @@ input:-webkit-autofill {
   white-space: nowrap;
 }
 .checkbox input[type=checkbox] + label::before {
-  background-color: #34495e;
-  border: 1px solid #465f78;
+  background-color: #bc8ef1;
+  border: 1px solid #C04AF7;
   border-radius: 3px;
   content: "";
   display: inline-block;
@@ -843,8 +843,8 @@ input:-webkit-autofill {
   width: 20px;
 }
 .checkbox input[type=checkbox] + label::after {
-  border-bottom: 3px solid #1abc9c;
-  border-right: 3px solid #1abc9c;
+  border-bottom: 3px solid #A152F7;
+  border-right: 3px solid #A152F7;
   display: block;
   height: 12px;
   left: 11px;
@@ -876,8 +876,8 @@ input:-webkit-autofill {
   white-space: nowrap;
 }
 .radio input[type=radio] + label::before {
-  background-color: #34495e;
-  border: 1px solid #465f78;
+  background-color: #bc8ef1;
+  border: 1px solid #C04AF7;
   border-radius: 20px;
   content: "";
   display: inline-block;
@@ -889,7 +889,7 @@ input:-webkit-autofill {
   width: 20px;
 }
 .radio input[type=radio] + label::after {
-  background-color: #1abc9c;
+  background-color: #A152F7;
   border-radius: 20px;
   display: block;
   height: 10px;
@@ -914,21 +914,21 @@ input:-webkit-autofill {
   }
 }
 .input {
-  background-color: #34495e;
+  background-color: #bc8ef1;
   margin-right: 10px;
   padding: 0;
   position: relative;
 }
 .input :focus,
 .input :active {
-  background-color: #3d566e;
+  background-color: #c9a5f4;
   border-radius: 3px;
 }
 .input input {
   background: transparent;
   border: 0;
   box-shadow: none;
-  color: #fff;
+  color: #000;
   font-size: 16px;
   line-height: 1.5em;
   margin: 0;
@@ -1021,7 +1021,7 @@ input:-webkit-autofill {
 }
 .loadingBar::before {
   animation: loading 2s linear infinite;
-  background-color: #1abc9c;
+  background-color: #A152F7;
   content: "";
   display: block;
   height: 6px;
@@ -1191,7 +1191,7 @@ input:-webkit-autofill {
   margin-bottom: 0;
 }
 .notification--primary {
-  background-color: #1abc9c;
+  background-color: #A152F7;
 }
 .notification--dark {
   background-color: #18232f;
@@ -1250,13 +1250,13 @@ input:-webkit-autofill {
   margin-right: 4px;
 }
 .paginator-itemLink {
-  background-color: #34495e;
+  background-color: #bc8ef1;
   border-radius: 3px;
   display: block;
   padding: 8px 16px;
 }
 .paginator-itemLink.is-active {
-  background-color: #1abc9c;
+  background-color: #A152F7;
   color: #fff;
   cursor: default;
 }
@@ -1282,24 +1282,24 @@ input:-webkit-autofill {
  *
  */
 .table {
-  background-color: #34495e;
-  border: 1px solid #465f78;
+  background-color: #bc8ef1;
+  border: 1px solid #C04AF7;
   border-collapse: collapse;
-  color: #fff;
+  color: #000;
   max-width: 100%;
   width: 100%;
 }
 .table th,
 .table td {
-  border-bottom: 1px solid #465f78;
+  border-bottom: 1px solid #C04AF7;
   padding: 8px;
   position: relative;
 }
 .table thead {
-  border-bottom: 1px solid #465f78;
+  border-bottom: 1px solid #C04AF7;
 }
 .table th {
-  background-color: #2c3e50;
+  background-color: #fff;
   color: #969da6;
   font-size: 12px;
   font-weight: normal;
@@ -1365,7 +1365,7 @@ input:-webkit-autofill {
   }
 }
 .table--responsive td:first-child {
-  border-top: 1px solid #465f78;
+  border-top: 1px solid #C04AF7;
 }
 .table--responsive th,
 .table--responsive td {
@@ -1374,7 +1374,7 @@ input:-webkit-autofill {
 @media (min-width: 576px) {
   .table--responsive th,
 .table--responsive td {
-    border-top: 1px solid #465f78;
+    border-top: 1px solid #C04AF7;
     display: table-cell;
   }
 }
@@ -1392,7 +1392,7 @@ input:-webkit-autofill {
  *
  */
 .tabs {
-  border-bottom: 1px solid #465f78;
+  border-bottom: 1px solid #C04AF7;
   text-align: center;
 }
 .tabs-item {
@@ -1405,12 +1405,12 @@ input:-webkit-autofill {
   position: relative;
 }
 .tabs-item:hover {
-  color: #1abc9c;
+  color: #A152F7;
   text-decoration: none;
 }
 .tabs-item.is-selected {
-  border-bottom: 3px solid #1abc9c;
-  color: #1abc9c;
+  border-bottom: 3px solid #A152F7;
+  color: #A152F7;
 }
 
 /**
@@ -1439,9 +1439,9 @@ input:-webkit-autofill {
  *
  */
 .tag {
-  background-color: #34495e;
+  background-color: #bc8ef1;
   border-radius: 3px 0 0 3px;
-  color: #fff;
+  color: #000;
   display: inline-block;
   line-height: 16px;
   margin: 0 16px 16px 0;
@@ -1450,7 +1450,7 @@ input:-webkit-autofill {
 }
 .tag::before {
   border-bottom: 16px solid transparent;
-  border-left: 8px solid #34495e;
+  border-left: 8px solid #bc8ef1;
   border-top: 16px solid transparent;
   content: "";
   height: 0;
@@ -1460,7 +1460,7 @@ input:-webkit-autofill {
   width: 0;
 }
 .tag::after {
-  background: #2c3e50;
+  background: #fff;
   border-radius: 100%;
   content: "";
   height: 5px;
@@ -2399,6 +2399,23 @@ input:-webkit-autofill {
 }
 .select::after, .select::before {
   background: transparent;
+}
+
+.notification {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.button {
+  padding: 7px 50px;
+}
+
+h1 {
+  color: #7656F7;
+  font-weight: bold;
+  font-size: 1.6em;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 /*# sourceMappingURL=layout.css.map */
