--- a/public/sass/layout.scss
+++ b/public/sass/layout.scss
@@ -1,13 +1,16 @@
 $c-gray-light: #edf3f6;
-$c-primary: #1abc9c;
+$c-primary: #A152F7;
 $c-secondary: #9b59b6;
-$c-light: #34495e;
-$c-text: #fff;
-$bdc-base: #465f78;
-$bgc-body: #2c3e50;
+$c-light: #bc8ef1;
+$c-text: #000;
+$bdc-base: #C04AF7;
+$bgc-body: #fff;
 $c-button-outlined: #fff;
 @import '../node_modules/sierra-library/lib/index';
 // quitamos la flecha que pone el sierra en el selector
 .select::after, .select::before {
     background: transparent;
 }
+.notification { margin-bottom: 10px; margin-top: 10px; }
+.button { padding: 7px 50px }
+h1 { color:#7656F7; font-weight:bold; font-size: 1.6em; padding-top: 5px; padding-bottom: 5px; }
