--- a/public/sass/layout.scss
+++ b/public/sass/layout.scss
@@ -14,3 +14,10 @@ $c-button-outlined: #fff;
 .notification { margin-bottom: 10px; margin-top: 10px; }
 .button { padding: 7px 50px }
 h1 { color:#7656F7; font-weight:bold; font-size: 1.6em; padding-top: 5px; padding-bottom: 5px; }
+h2 { color:#7656F7; font-weight:bold; font-size: 1.2em; padding-top: 5px; padding-bottom: 5px; }
+.contenedor-estadisticas {
+    background: #f2d4fc;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 5px;
+}
