--- a/public/sass/layout.scss
+++ b/public/sass/layout.scss
@@ -6,6 +6,7 @@ $c-text: #000;
 $bdc-base: #C04AF7;
 $bgc-body: #fff;
 $c-button-outlined: #fff;
+$color-letra-heading: #7656F7;
 @import '../node_modules/sierra-library/lib/index';
 // quitamos la flecha que pone el sierra en el selector
 .select::after, .select::before {
@@ -13,11 +14,8 @@ $c-button-outlined: #fff;
 }
 .notification { margin-bottom: 10px; margin-top: 10px; }
 .button { padding: 7px 50px }
-h1 { color:#7656F7; font-weight:bold; font-size: 1.6em; padding-top: 5px; padding-bottom: 5px; }
-h2 { color:#7656F7; font-weight:bold; font-size: 1.2em; padding-top: 5px; padding-bottom: 5px; }
-.contenedor-estadisticas {
-    background: #f2d4fc;
-    padding: 10px;
-    border-radius: 10px;
-    margin: 5px;
-}
+h1 { color: $color-letra-heading; font-weight:bold; font-size: 1.6em; padding-top: 5px; padding-bottom: 5px; }
+h2 { color: $color-letra-heading; font-weight:bold; font-size: 1.2em; padding-top: 5px; padding-bottom: 5px; }
+h2 { color: $color-letra-heading; font-size: 1.0em; padding-top: 5px; padding-bottom: 5px; }
+.contenedor-estadisticas { background: #f2d4fc; padding: 10px; border-radius: 10px; margin: 5px; }
+.formulario-label { font-weight:bold; color: #a52f2f; background-color: #f9f0ff; border-radius: 5px; margin-bottom: 3px; text-align: center;}
