--- a/public/sass/layout.scss
+++ b/public/sass/layout.scss
@@ -19,3 +19,7 @@ h2 { color: $color-letra-heading; font-weight:bold; font-size: 1.2em; padding-to
 h2 { color: $color-letra-heading; font-size: 1.0em; padding-top: 5px; padding-bottom: 5px; }
 .contenedor-estadisticas { background: #f2d4fc; padding: 10px; border-radius: 10px; margin: 5px; }
 .formulario-label { font-weight:bold; color: #a52f2f; background-color: #f9f0ff; border-radius: 5px; margin-bottom: 3px; text-align: center;}
+.background-azul { background: #3ad7ff; }
+.background-verde { background: #34bc6b; }
+.background-marron { background: #804000; }
+
