--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -2426,9 +2426,9 @@ h2 {
   padding-bottom: 5px;
 }
 
-h2 {
+h2.h2-calculadora-index {
   color: #7656F7;
-  font-size: 1em;
+  font-size: 1.1em;
   padding-top: 5px;
   padding-bottom: 5px;
 }
@@ -2459,6 +2459,17 @@ h2 {
 
 .background-marron {
   background: #804000;
+}
+
+hr.style-two {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+.calculadora-index-imagen {
+  background-color: #eaeafc;
+  border-radius: 30%;
 }
 
 /*# sourceMappingURL=layout.css.map */
