--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -2467,4 +2467,8 @@ hr.style-two {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
+.fondo-calculadoras-index {
+  background-color: #f2f2ff;
+}
+
 /*# sourceMappingURL=layout.css.map */
