--- a/public/sass/layout.scss
+++ b/public/sass/layout.scss
@@ -27,3 +27,4 @@ hr.style-two {
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
+.fondo-calculadoras-index { background-color: #f2f2ff; }
