--- a/public/sass/layout.scss
+++ b/public/sass/layout.scss
@@ -13,6 +13,7 @@ $color-letra-heading: #7656F7;
     background: transparent;
 }
 .notification { margin-bottom: 10px; margin-top: 10px; }
+.btn-mas-resultados { margin-bottom: 10px; margin-top: 10px; }
 .button { padding: 7px 50px }
 h1 { color: $color-letra-heading; font-weight:bold; font-size: 1.6em; padding-top: 5px; padding-bottom: 5px; }
 h2 { color: $color-letra-heading; font-weight:bold; font-size: 1.2em; padding-top: 5px; padding-bottom: 5px; }
@@ -28,3 +29,4 @@ hr.style-two {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 .fondo-calculadoras-index { background-color: #f2f2ff; }
+#notification-ajax-login { display: none; }
